--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mysql2": "^3.6.3",
+    "handlebars": "^4.7.8",
+    "mysql2": "^3.7.1",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
-    "sequelize": "^6.35.0",
+    "sequelize": "^6.35.2",
     "sequelize-cli": "^6.6.2"
   }
 }
