--- a/package.json
+++ b/package.json
@@ -26,5 +26,7 @@
     "passport": "^0.6.0",
     "sequelize": "^6.35.2",
     "sequelize-cli": "^6.6.2"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
